--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ langchain-openai = "^0.1.8"
 requests = "^2.32.3"
 
 
+[tool.poetry.group.dev.dependencies]
+black = "^24.4.2"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
