--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ langchain = "^0.2.3"
 langchain-core = "^0.2.5"
 langchain-openai = "^0.1.8"
 requests = "^2.32.3"
+pillow = "^10.3.0"
+pybase64 = "^1.3.2"
 
 
 [tool.poetry.group.dev.dependencies]
